# gaiare-animation-studio

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: INSTALL.ru.md  RELEASING.md
docs/issues/: 001-mirror-ffmpeg-hetzner.md  002-apple-developer-id.md  003-readopt-race-inflight-flag.md  004-cicd-matrix-builds.md  005-prompt-tab-refactors.md  README.md
docs/tickets/: GS-1-rails-api-token-and-studio-auth.md  GS-10-studio-mcp-bridge.md  GS-11-studio-skill-prompt-mcp-update.md  GS-12-studio-reference-image-edit-gemini.md  GS-13-studio-auto-sign-refs-from-rails.md  GS-14-enhanced-image-variants-in-gallery.md  GS-2-rails-studio-api-questions-endpoints.md  GS-3-studio-deep-link-keychain-settings.md  GS-4-studio-rust-rails-proxy.md  GS-5-studio-browse-and-open-modal.md  GS-6-rails-answer-video-url-and-publish-endpoints.md  GS-7-rails-hetzner-presigner.md  GS-8-studio-publish-button-and-upload.md  GS-9-studio-country-namespace-migration.md  README.md
scripts/: check-skills-size.mjs  download-ffmpeg.mjs  release.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gemini.rs  lib.rs  llm.rs  main.rs  rails.rs  replicate.rs  safe_path.rs  secrets.rs
src/components/: AssetGallery.tsx  AssetViewer.tsx  ChatPanel.tsx  ConfirmModal.tsx  ImageLightbox.tsx  JobsPanel.tsx  NewWorkspaceModal.tsx  OpenQuestionModal.tsx  PromptLibraryModal.tsx  QuestionContextPanel.tsx  SettingsModal.tsx  TabStrip.tsx  UpdateBanner.tsx  ui.tsx
src/components/tabs/: ExtractFrameTab.tsx  GenerateClipTab.tsx  SignFixList.tsx  SignRegionPicker.tsx  StitchTab.tsx  TransformTab.tsx  TrimClipTab.tsx
src/lib/: drag.ts  ffmpeg.ts  gemini.ts  llm.ts  lock.ts  prompt-library.ts  promptTemplates.ts  rails.ts  replicate.ts  secrets.ts  settings.ts  updater.ts  workdir.ts  workspace.ts
src/skills/: flux-image-edit.md  wan-i2v.md
