[package]
name = "gaiare-animation-studio"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gaiare_animation_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Rust-side HTTP client for Replicate proxy commands. Reading the
# REPLICATE_API_TOKEN env var in the Rust process means the secret
# never lands in the renderer's JS bundle.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
tokio = { version = "1", features = ["time", "fs"] }
url = "2"
# `dotenvy` (the maintained fork of `dotenv`) picks up the same `.env`
# file the Vite dev server reads, so local dev works the same way.
# In production builds (`pnpm tauri build`) the env var must be set
# via the OS / build system before bundling — there's no fallback.
dotenvy = "0.15"
# Cross-platform known-folder lookup (Documents, home) for the
# production-build .env fallback paths — `dotenvy::dotenv()` alone
# can't find `.env` from a packaged `.app` whose cwd is `/`.
dirs = "5"

